<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JNIExecutionSpeedTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="calculate_tip">Calculate Tip</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="tip_percentage">Tip %</string>
    <string name="tip_amount">Tip</string>
    <string name="total_amount">Total</string>
    <string name="jni_elapsed_time">JNI elapsed</string>
    <string name="java_elapsed_time">Java elapsed</string>
    <string name="value">Value</string>
    <string name="tip">17%</string>

</resources>
